--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.22.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.523.0",
     "next": "15.2.4",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
