--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^12.22.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.523.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.4",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -42,6 +42,6 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
