--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "comments": "off",
         "strings": "off",
         "other": "off"
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
