--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
