--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
   share_plus: ^7.2.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
