--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.2.4
   share_plus: ^7.2.1
   path: ^1.9.0
+  mobile_scanner: ^3.5.5
 
 dev_dependencies:
   flutter_test:
