--- a/flutter/.gitignore
+++ b/flutter/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Keystore files (DO NOT COMMIT!)
+*.jks
+*.keystore
+android/key.properties
