--- a/flutter/ios/Podfile
+++ b/flutter/ios/Podfile
@@ -1,5 +1,5 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '13.0'
+# Define iOS platform version (required to avoid warnings)
+platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -39,5 +39,30 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    # Enforce minimum iOS deployment target for all pods
+    # Fixes: "The iOS deployment target 'IPHONEOS_DEPLOYMENT_TARGET' is set to 10.0"
+    target.build_configurations.each do |config|
+      # Set minimum deployment target to iOS 12.0 (minimum required) or 13.0 (to match platform)
+      deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f
+      if deployment_target < 12.0
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      end
+      
+      # Suppress keyWindow deprecation warnings for third-party pods
+      # This is a known issue with some Flutter plugins that haven't updated to iOS 13+ APIs
+      config.build_settings['OTHER_CFLAGS'] ||= ['$(inherited)']
+      config.build_settings['OTHER_CFLAGS'] << '-Wno-deprecated-declarations'
+      config.build_settings['OTHER_SWIFT_FLAGS'] ||= ['$(inherited)']
+      config.build_settings['OTHER_SWIFT_FLAGS'] << '-Xcc -Wno-deprecated-declarations'
+    end
+  end
+  
+  # Also update the Pods project's deployment target
+  installer.pods_project.build_configurations.each do |config|
+    deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f
+    if deployment_target < 12.0
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+    end
   end
 end
