--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   # Audio Recording (commented out - will add when implementing audio recording)
   # record: ^5.1.2
   
+  # Notifications
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.2
+  firebase_core: ^3.6.0
+  
   # HTTP
   http: ^1.2.0
   
@@ -49,7 +54,7 @@ dependencies:
   url_launcher: ^6.2.4
   share_plus: ^7.2.1
   path: ^1.9.0
-  mobile_scanner: ^5.0.0
+  mobile_scanner: ^7.0.0
 
 flutter_launcher_icons:
   android: true
