--- a/flutter/ios/Podfile
+++ b/flutter/ios/Podfile
@@ -1,5 +1,5 @@
 # Define iOS platform version (required to avoid warnings)
-platform :ios, '13.0'
+platform :ios, '15.5'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -43,10 +43,10 @@ post_install do |installer|
     # Enforce minimum iOS deployment target for all pods
     # Fixes: "The iOS deployment target 'IPHONEOS_DEPLOYMENT_TARGET' is set to 10.0"
     target.build_configurations.each do |config|
-      # Set minimum deployment target to iOS 12.0 (minimum required) or 13.0 (to match platform)
+      # Set minimum deployment target to iOS 15.5 (required by mobile_scanner)
       deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f
-      if deployment_target < 12.0
-        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      if deployment_target < 15.5
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
       end
       
       # Fix Swift optimization level warnings
@@ -73,8 +73,8 @@ post_install do |installer|
   # Also update the Pods project's deployment target
   installer.pods_project.build_configurations.each do |config|
     deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f
-    if deployment_target < 12.0
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+    if deployment_target < 15.5
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
     end
   end
 end
