--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: CompostKaki
 description: A digital journaling platform for community composting
 publish_to: 'none'
-version: 1.1.1+5
+version: 1.1.1+7
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -56,6 +56,7 @@ dependencies:
   share_plus: ^7.2.1
   path: ^1.9.0
   mobile_scanner: ^6.0.11
+  package_info_plus: ^8.0.0
 
 flutter_launcher_icons:
   android: true
